Open social link on new tab

--- a/src/sections/footer.liquid
+++ b/src/sections/footer.liquid
@@ -12,7 +12,7 @@
 
         {% if settings[social_link] != blank %}
           <li>
-            <a href="{{ settings[social_link] }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: social }}">
+            <a href="{{ settings[social_link] }}" target="_blank" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: social }}">
               {% include social_icon %}
               <span class="icon-fallback-text">{{ social }}</span>
             </a>
