--- a/src/sections/footer.liquid
+++ b/src/sections/footer.liquid
@@ -60,7 +60,7 @@
     </diV>
 
     <div class="copyright">
-      <small>&copy; {{ 'now' | date: "%Y" }} {{ shop.name | link_to: '/' }}</small>
+      <small>&copy; {{ 'now' | date: "%Y" }} {{ shop.name | link_to: '/' }} —  Dev : Maxime Gilbert  —  Photos : © Mario Simon Lafleur</small>
     </div>
   </div>
   <div class="sidebar right-sidebar"></div>
