--- a/src/assets/styles/templates/page.scss
+++ b/src/assets/styles/templates/page.scss
@@ -2,13 +2,60 @@
   .rte {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-column-gap: 2px;
+    font-family: "TotentanzBackslanted";
 
-    p {
+    p.about {
+      max-width: 60%;
+      margin: auto;
+      line-height: 1.5em;
+    }
+
+    p.full-row {
       grid-column-start: 1;
       grid-column-end: 3;
       text-align: center;
-      font-family: "TotentanzBackslanted";
       padding: 50px 0;
+    }
+
+    h1 {
+      font-family: "TotentanzBackslanted";
+      grid-column-start: 1;
+      grid-column-end: 3;
+      border-bottom: 1px solid black;
+      max-width: 90%;
+      margin-left: 5%;
+    }
+
+    h3 {
+      font-family: "TotentanzBackslanted";
+      font-weight: lighter;
+    }
+
+    .stockist {
+      h3 {
+        margin-bottom: 0;
+      }
+
+      p  {
+        margin-top: 0;
+      }
+
+      a {
+        text-decoration: none;
+        color: rgba(0, 0, 0, 0.6);
+      }
+      margin-left: 10%;
+    }
+  }
+}
+
+/* MEDIA QUERIES */
+@media only screen and (max-width: 768px) {
+  .page-container {
+    .rte {
+      display: grid;
+      grid-template-columns: 1fr;
     }
   }
 }
