Basic collection layout

--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -39,6 +39,7 @@
 @import "./sections/footer";
 @import "./sections/product";
 @import "./sections/cart";
+@import "./sections/collection";
 
 // Templates
 @import "./templates/gift_card";
