--- a/src/assets/styles/sections/footer.scss
+++ b/src/assets/styles/sections/footer.scss
@@ -32,9 +32,44 @@
 }
 
 .pages-container {
+  form {
+    display: flex;
+    border-top: 1px solid;
+
+    p {
+      padding-left: 5px;
+      font-family: "TotentanzBackslanted";
+      font-size: 0.9em;
+    }
+  }
+  .email-input {
+    width: 80%;
+    margin-left: 0;
+    position: relative;
+    display: block;
+    border: none;
+    font-family: "TotentanzBackslanted";
+    padding-left: 10px;
+    text-transform: uppercase;
+    font-size: 0.9em;
+  }
+
+  #Subscribe {
+    width: 20%;
+    border: none;
+    background: white;
+    border: none;
+    max-height: 50px;
+
+    svg {
+      max-width: 32px;
+      margin-top: 3px;
+    }
+  }
+
   ul {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1.5fr 1fr 1fr 1fr;
     list-style: none;
     padding: 0;
     margin: 0;
@@ -86,6 +121,10 @@
       color: black;
       text-decoration: none;
     }
+
+    a:hover {
+      text-decoration: underline;
+    }
   }
 }
 
@@ -113,11 +152,23 @@
 
     ul {
       grid-template-columns: 1fr 1fr 1fr;
+      padding-left: 0;
     }
   }
 
   .pages-container {
     grid-row: 2;
+
+    form {
+      border-left: 1px solid black;
+
+      p {
+        font-size: 0.7em;
+      }
+    }
+    .email-input {
+      font-size: 0.7em;
+    }
 
     ul {
       grid-template-columns: 1fr 1fr;
@@ -141,8 +192,11 @@
 
   .copyright {
     grid-row: 3;
+    padding-left: 0;
+    text-align: center;
     small {
-      font-size: 0.7em;
+      font-size: 0.5em;
+      margin-top: 2px;
     }
   }
 }
