Sticky product infos on footer

--- a/src/sections/product.liquid
+++ b/src/sections/product.liquid
@@ -22,6 +22,7 @@
   </div>
 
   <div class="product-information-container">
+  <div class="sticky-mobile-info">
     <h1>{{ product.title }}</h1>
 
     <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
@@ -101,7 +102,7 @@
             </span>
         </button>
       </form>
-
+      </div>
     </div>
 
     <div class="rte">
