--- a/src/assets/styles/sections/product.scss
+++ b/src/assets/styles/sections/product.scss
@@ -110,6 +110,28 @@ button.add-to-cart {
         padding-left: 35px;
         padding-right: 20px;
       }
+
+      .sticky-mobile-info {
+        position: fixed;
+        background: white;
+        width: 100%;
+        bottom: 0;
+
+        .one-size {
+          display: block;
+          font-size: 17px;
+          width: 160px;
+          margin: 2% 2% 5% 5%;
+          float: left;
+          max-height: 43px;
+        }
+
+        button.add-to-cart {
+          margin: 2% 5% 5% 0;
+          width: 160px;
+          float: right;
+        }
+      }
     }
   }
 }
