--- a/src/assets/styles/sections/product.scss
+++ b/src/assets/styles/sections/product.scss
@@ -7,17 +7,21 @@
 .product-container {
   display: grid;
   grid-template-columns: repeat(2, minmax(350px, 1fr));
-  grid-template-rows: 760px repeat(auto-fit, minmax(350px, max-content));
+  grid-template-rows: repeat(2, minmax(350px, 1fr));
   grid-column-gap: 2px;
   grid-row-gap: 2px;
   max-width: 100%;
   margin-top: 9%;
-  font-family: "TotentanzSlanted";
+  font-family: 'TotentanzSlanted';
 
   h1 {
-    font-family: "TotentanzSlanted";
+    font-family: 'TotentanzSlanted';
     font-size: 2.4em;
     font-weight: lighter;
+  }
+
+  .featured-image-product {
+    margin-bottom: 10%;
   }
 }
 
@@ -49,7 +53,7 @@ button.add-to-cart {
   padding: 12px 5px;
   text-transform: uppercase;
   font-size: 17px;
-  font-family: "InterstateBold";
+  font-family: 'InterstateBold';
   margin: 2% 0 5% 0;
   width: 160px;
 }
@@ -85,6 +89,7 @@ button.add-to-cart {
 
       .featured-image-product {
         margin-top: 45px;
+        margin-bottom: 0;
       }
     }
 
