--- a/src/sections/featured-collection.liquid
+++ b/src/sections/featured-collection.liquid
@@ -32,6 +32,7 @@
         <div class="caption">
         <p>{{ product.title | escape }}</p>
         <span class="product-title-separator">——————————</span>
+        {% if product.available %}
         <span class="price-list">
           {% if product.compare_at_price > product.price %}
             {% if product.price_varies %}
@@ -48,6 +49,11 @@
             {% else %}
               {{ product.price | money }}
             {% endif %}
+          {% endif %}
+        </span>
+        {% else %}
+        <span class="sold-out-product-list">
+            {{ "SOLD OUT / MORE SOON" }}
           {% endif %}
         </span>
         </div>
