--- a/src/sections/footer.liquid
+++ b/src/sections/footer.liquid
@@ -80,7 +80,7 @@
     </diV>
 
     <div class="copyright">
-      <small>&copy; {{ 'now' | date: "%Y" }} {{ shop.name | link_to: '/' }} —  Dev : Maxime Gilbert  —  <a href="http://mariosimonlafleur.fr/" target="_blank">Photos : © Mario Simon Lafleur</a></small>
+      <small>&copy; {{ 'now' | date: "%Y" }} {{ shop.name | link_to: '/' }} —  Dev : Maxime Gilbert  —  Photos : <a href="http://mariosimonlafleur.fr/" target="_blank">© Mario Simon Lafleur</a></small>
     </div>
   </div>
   <div class="sidebar right-sidebar"></div>
