--- a/src/assets/styles/sections/footer.scss
+++ b/src/assets/styles/sections/footer.scss
@@ -38,17 +38,16 @@
 
     p {
       padding-left: 5px;
-      font-family: "TotentanzBackslanted";
+      font-family: 'TotentanzBackslanted';
       font-size: 0.9em;
     }
   }
   .email-input {
     width: 80%;
     margin-left: 0;
-    position: relative;
     display: block;
     border: none;
-    font-family: "TotentanzBackslanted";
+    font-family: 'TotentanzBackslanted';
     padding-left: 10px;
     text-transform: uppercase;
     font-size: 0.9em;
@@ -93,7 +92,7 @@
       color: black;
       text-decoration: none;
       text-transform: uppercase;
-      font-family: "TotentanzBackslanted";
+      font-family: 'TotentanzBackslanted';
       font-size: 0.9em;
     }
   }
@@ -114,7 +113,7 @@
   small {
     display: block;
     padding-top: 17px;
-    font-family: "TotentanzBackslanted";
+    font-family: 'TotentanzBackslanted';
     font-size: 0.9em;
 
     a {
