--- a/src/assets/styles/sections/product.scss
+++ b/src/assets/styles/sections/product.scss
@@ -113,10 +113,16 @@ button.add-to-cart {
       padding-left: 0;
       grid-row: 2;
 
+      .price {
+        font-size: 1.6em;
+        margin-bottom: 10px;
+      }
+
       h1 {
         text-align: center;
-        font-size: 28px;
+        font-size: 1.5em;
         font-weight: 100;
+        padding: 0 2%;
       }
 
       form {
