--- a/src/assets/styles/templates/page.scss
+++ b/src/assets/styles/templates/page.scss
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 2px;
-    font-family: "TotentanzSlanted";
+    font-family: 'TotentanzSlanted';
 
     .cgv {
       grid-column-start: 1;
@@ -29,7 +29,7 @@
     }
 
     h1 {
-      font-family: "TotentanzSlanted";
+      font-family: 'TotentanzSlanted';
       grid-column-start: 1;
       grid-column-end: 3;
       border-bottom: 1px solid black;
@@ -42,12 +42,12 @@
     }
 
     h3 {
-      font-family: "TotentanzSlanted";
+      font-family: 'TotentanzSlanted';
       font-weight: lighter;
     }
 
     h4 {
-      font-family: "TotentanzSlanted";
+      font-family: 'TotentanzSlanted';
       text-transform: uppercase;
       font-size: 1em;
       max-width: 90%;
@@ -85,7 +85,7 @@
 
       p.about {
         max-width: 80%;
-        padding-top: 2%;
+        padding: 7% 0;
       }
     }
   }
