--- a/src/assets/styles/sections/header.scss
+++ b/src/assets/styles/sections/header.scss
@@ -5,33 +5,33 @@ header {
 }
 
 nav.main-nav {
-  text-align: center;
+  position: fixed;
+  z-index: 99;
+  top: 222px;
+  left: -305px;
+  display: block;
   width: 695px;
   height: 80px;
-  display: block;
+  text-align: center;
   transform: rotate(-90deg);
-  position: fixed;
-  left: -302px;
-  top: 222px;
   font-family: 'TotentanzBackslanted';
   font-size: 1.2em;
-  z-index: 99;
 
   ul {
     display: flex;
 
     ul.submenu {
-      transform: rotate(90deg);
       position: relative;
       flex-direction: column;
-      text-align: initial;
-      padding: 0;
       margin-top: 20px;
-      font-size: 0.8em;
       margin-left: -25%;
+      padding: 0;
+      transform: rotate(90deg);
+      text-align: initial;
+      font-size: 0.8em;
 
       a {
-        font-size: 0.7em;
+        font-size: 0.6em;
       }
     }
   }
@@ -41,8 +41,8 @@ nav.main-nav {
   }
 
   a {
-    text-decoration: none;
     padding: 0 10px;
+    text-decoration: none;
     color: black;
     text-transform: uppercase;
     -webkit-transition: all 300ms ease-in-out;
@@ -60,10 +60,10 @@ nav.main-nav {
   }
 
   span.nav-separator {
+    margin-left: 10px;
     font-family: sans-serif;
     font-weight: lighter;
     font-size: 26px;
-    margin-left: 10px;
   }
 
   .mobile-menu-icon {
@@ -73,17 +73,21 @@ nav.main-nav {
 
 .logo-image {
   position: fixed;
-  top: 44px;
+  top: 30px;
   left: calc(50% - 100px);
   z-index: 999;
 }
 
 .cart {
   position: fixed;
-  right: 0px;
-  max-width: 75px;
-  width: 75px;
   top: 44px;
+  right: 0;
+  width: 75px;
+  max-width: 75px;
+
+  svg {
+    margin-top: -10px;
+  }
 }
 
 .cart-item-count {
@@ -106,11 +110,11 @@ nav.main-nav {
 /* MEDIA QUERIES */
 @media only screen and (max-width: 768px) {
   nav.main-nav {
+    top: initial;
+    left: initial;
     width: 100%;
     height: 50px;
     transform: initial;
-    top: initial;
-    left: initial;
 
     ul {
       display: grid;
@@ -127,11 +131,11 @@ nav.main-nav {
   }
 
   .main-nav li.mobile-menu-icon {
-    float: right;
-    display: block;
-    left: 16px;
     position: absolute;
     top: 26px;
+    left: 16px;
+    display: block;
+    float: right;
   }
 
   .main-nav.responsive {
@@ -190,8 +194,8 @@ nav.main-nav {
 
   .cart {
     top: 18px;
-    width: 50px;
     right: 16px;
+    width: 50px;
   }
 
   .cart-item-count {
@@ -203,10 +207,10 @@ nav.main-nav {
   }
 
   #shopify-section-header {
-    height: 79px;
     position: fixed;
-    background: rgba(255, 255, 255, 0.6);
     z-index: 999;
     width: 100%;
+    height: 79px;
+    background: rgba(255, 255, 255, 0.6);
   }
 }
