--- a/src/assets/styles/sections/product.scss
+++ b/src/assets/styles/sections/product.scss
@@ -113,6 +113,7 @@ button.add-to-cart {
       .price {
         font-size: 1.4em;
         margin-bottom: 10px;
+        margin-bottom: 0;
       }
 
       h1 {
@@ -120,6 +121,7 @@ button.add-to-cart {
         font-size: 1.3em;
         font-weight: 100;
         padding: 0 2%;
+        margin: 2% 0;
       }
 
       form {
