--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -3,47 +3,47 @@
 /**
  * Agogo Theme | Built with Slate
  */
-@import "~normalize.css/normalize";
+@import '~normalize.css/normalize';
 
 // Settings
-@import "./variables";
+@import './variables';
 
 // Tools
-@import "./tools/mixins";
-@import "./tools/functions";
+@import './tools/mixins';
+@import './tools/functions';
 
 // Core
-@import "./core/forms";
-@import "./core/helpers";
-@import "./core/layout";
-@import "./core/media";
-@import "./core/responsive-tables";
-@import "./core/rte";
-@import "./core/typography";
+@import './core/forms';
+@import './core/helpers';
+@import './core/layout';
+@import './core/media';
+@import './core/responsive-tables';
+@import './core/rte';
+@import './core/typography';
 
 // Components
-@import "./components/buttons";
-@import "./components/hero-banner";
-@import "./components/icons";
-@import "./components/placeholders";
-@import "./components/responsive-images";
+@import './components/buttons';
+@import './components/hero-banner';
+@import './components/icons';
+@import './components/placeholders';
+@import './components/responsive-images';
 
 // Sections
-@import "./sections/blog-posts";
-@import "./sections/collection-list";
-@import "./sections/featured-collection";
-@import "./sections/featured-product";
-@import "./sections/image-with-text";
-@import "./sections/images-duo";
-@import "./sections/header";
-@import "./sections/footer";
-@import "./sections/product";
-@import "./sections/cart";
-@import "./sections/collection";
+@import './sections/blog-posts';
+@import './sections/collection-list';
+@import './sections/featured-collection';
+@import './sections/featured-product';
+@import './sections/image-with-text';
+@import './sections/images-duo';
+@import './sections/header';
+@import './sections/footer';
+@import './sections/product';
+@import './sections/cart';
+@import './sections/collection';
 
 // Templates
-@import "./templates/gift_card";
-@import "./templates/page";
+@import './templates/gift_card';
+@import './templates/page';
 
 body {
   display: flex;
