--- a/src/assets/styles/sections/collection.scss
+++ b/src/assets/styles/sections/collection.scss
@@ -23,7 +23,7 @@
     width: 100%;
     padding-top: 10px;
     padding-bottom: 25px;
-    font-family: "TotentanzBackslanted";
+    font-family: 'TotentanzBackslanted';
     -webkit-transition: all 400ms ease-in-out;
     -ms-transition: all 400ms ease-in-out;
     transition: all 400ms ease-in-out;
