--- a/src/assets/styles/sections/featured-collection.scss
+++ b/src/assets/styles/sections/featured-collection.scss
@@ -19,7 +19,7 @@
     width: 100%;
     padding-top: 10px;
     padding-bottom: 25px;
-    font-family: "TotentanzBackslanted";
+    font-family: 'TotentanzBackslanted';
     -webkit-transition: all 400ms ease-in-out;
     -ms-transition: all 400ms ease-in-out;
     transition: all 400ms ease-in-out;
@@ -77,7 +77,7 @@
     max-width: 80%;
     margin: 0 auto;
     margin-top: -52px;
-    padding: 1px 0 30px 0;
+    padding: 1px 0 30px;
 
     .price-list {
       font-size: 24px;
