--- a/src/assets/styles/sections/featured-product.scss
+++ b/src/assets/styles/sections/featured-product.scss
@@ -6,29 +6,29 @@
 }
 
 .featured-product {
+  position: relative;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 2px;
   grid-row-gap: 2px;
   max-width: 100%;
   text-align: center;
-  position: relative;
 
   .caption-featured-product {
-    color: white;
     position: absolute;
     bottom: 0;
     width: 50%;
     padding-top: 10px;
     padding-bottom: 25px;
-    font-family: "TotentanzBackslanted";
+    color: white;
+    font-family: 'TotentanzBackslanted';
     -webkit-transition: all 400ms ease-in-out;
     -ms-transition: all 400ms ease-in-out;
     transition: all 400ms ease-in-out;
 
     p {
-      font-size: 1.2em;
       margin-bottom: 0;
+      font-size: 1.2em;
     }
 
     .price-list {
@@ -66,7 +66,7 @@
       width: 80%;
       margin: 0 auto;
       margin-top: -58px;
-      padding: 1px 0 30px 0;
+      padding: 1px 0 30px;
 
       .price-list {
         font-size: 24px;
