--- a/src/assets/styles/sections/header.scss
+++ b/src/assets/styles/sections/header.scss
@@ -93,7 +93,8 @@ nav.main-nav {
 .cart-item-count {
   position: absolute;
   left: 34%;
-  top: -4%;
+  top: -33%;
+
   color: white;
   background: black;
   font-family: 'InterstateBold';
@@ -141,8 +142,8 @@ nav.main-nav {
   .main-nav.responsive {
     position: relative;
     padding-top: 30%;
-    height: 570px;
-    background: rgba(255, 255, 255, 0.7);
+    height: 100vh;
+    background: rgba(255, 255, 255, 0.8);
 
     ul.submenu {
       transform: none;
@@ -193,14 +194,14 @@ nav.main-nav {
   }
 
   .cart {
-    top: 18px;
+    top: 41px;
     right: 16px;
     width: 50px;
   }
 
   .cart-item-count {
-    left: 36%;
-    top: 10%;
+    left: 34%;
+    top: -72%;
     padding: 2px 5px;
     border-radius: 93%;
     font-size: 11px;
