--- a/src/assets/styles/sections/product.scss
+++ b/src/assets/styles/sections/product.scss
@@ -10,7 +10,7 @@
   grid-row-gap: 2px;
   margin-top: 9%;
   font-family: 'TotentanzSlanted';
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-template-columns: 1fr 1fr;
 
   h1 {
     font-family: 'TotentanzSlanted';
