--- a/src/assets/styles/sections/product.scss
+++ b/src/assets/styles/sections/product.scss
@@ -114,6 +114,7 @@ button.add-to-cart {
         font-size: 1.4em;
         margin-bottom: 10px;
         margin-bottom: 0;
+        padding-bottom: 5px;
       }
 
       h1 {
